# flight_planner

./: .gitignore  LICENCE  README.md  flight_planner.py  pyproject.toml  requirements.txt  setup.py
flight_planner/: __init__.py  ec_images.py  flight_planner.py  flightdef.py  gui.py  image_utils.py  images_ec.py  images_mo.py  images_sic.py  mo_images.py  sic_images.py  ssh_images.py  user_config.py  user_config_ASC.py  user_config_CAPRI.py
src/: flightdef.py  images_ec.py  images_ssh.py
