[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "flight_planner"
version = "0.0.1"
dependencies = ["Cartopy>=0.23.0",
                "docx>=0.2.4",
                "gpxpy>=1.6.2",
                "matplotlib">=3.10.1,
                "numpy>=2.2.4",
                "python_docx>=1.1.2",
                "Requests>=2.32.3",
                "Shapely>=2.0.7"]
requires-python = ">=3.11"
authors = [
  {name = "Ben Harvey", email = "ben.harvey@ncas.ac.uk"},
]
readme = "README.md"